# docs/swagger.yml
@@ -1,25 +1,26 @@
 swagger: '2.0'
 info:
-  version: 1.0.0
-  title: MasterNode-App APIs
-  description: Happy to code masternode-app APIs
+  version: 2.0.0
+  title: XDC Network Governance DApp APIs
+  description: Happy to code XDC Network Governance DApp APIs
   license:
     name: Github
-    url: 'https://github.com/XinFinOrg/MasterNode-App'
+    url: 'https://github.com/xinfinorg/masternodeapp'
 tags:
   - name: Config
-    description: Get masternode-app Application Configuration
-  - name: Monitor
-    description: Get information for CPU and Memory charts
+    description: Get XDC Network Governance DApp Application Configuration
   - name: Candidates
     description: Get Candidates information
   - name: Voters
     description: Get Voter information
   - name: Transaction
     description: Get transactions of candidate and voter
+  - name: Signer
+    description: Get a list of signers
 schemes:
   - https
   - http
+host: master.xinfin.network
 consumes:
   - application/json
 produces:
@@ -29,7 +30,7 @@ paths:
     get:
       tags:
         - Config
-      summary: Get masternode-app Application Configuration
+      summary: Get XDC Network Governance DApp Application Configuration
       responses:
         '200':
           description: OK
@@ -43,32 +44,6 @@ paths:
           description: Not Acceptable
         '500':
           description: Server Internal Error
-  /api/monitor:
-    parameters:
-      - name: db
-        in: query
-        required: true
-        description: Database
-        type: string
-      - name: q
-        in: query
-        required: true
-        description: Query
-        type: string
-      - name: epoch
-        in: query
-        required: true
-        description: Epoch
-        type: string
-    get:
-      tags:
-        - Monitor
-      summary: Get information for CPU and Memory charts
-      responses:
-        '200':
-          description: OK
-          schema:
-            $ref: '#/definitions/monitor'
   /api/candidates:
     parameters:
       - name: limit
@@ -88,6 +63,90 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/candidate'
+        '406':
+          description: Not Acceptable
+  /api/candidates/masternodes:
+    parameters:
+      - name: limit
+        in: query
+        description: Number of record in a query
+        type: number
+      - name: page
+        in: query
+        description: Page number
+        type: number
+    get:
+      tags:
+        - Candidates
+      summary: Get masternodes(exclude Proposed candidates) information
+      responses:
+        '200':
+          description: OK
+          schema:
+            $ref: '#/definitions/masternode'
+        '406':
+          description: Not Acceptable
+  /api/candidates/slashedMNs:
+    parameters:
+      - name: limit
+        in: query
+        description: Number of record in a query
+        type: number
+      - name: page
+        in: query
+        description: Page number
+        type: number
+    get:
+      tags:
+        - Candidates
+      summary: Get slashed Masternodes
+      responses:
+        '200':
+          description: OK
+          schema:
+            $ref: '#/definitions/slashedMN'
+        '406':
+          description: Not Acceptable
+  /api/candidates/proposedMNs:
+    parameters:
+      - name: limit
+        in: query
+        description: Number of record in a query
+        type: number
+      - name: page
+        in: query
+        description: Page number
+        type: number
+    get:
+      tags:
+        - Candidates
+      summary: Get proposed Masternodes
+      responses:
+        '200':
+          description: OK
+          schema:
+            $ref: '#/definitions/proposedMN'
+        '406':
+          description: Not Acceptable
+  /api/candidates/resignedMNs:
+    parameters:
+      - name: limit
+        in: query
+        description: Number of record in a query
+        type: number
+      - name: page
+        in: query
+        description: Page number
+        type: number
+    get:
+      tags:
+        - Candidates
+      summary: Get resigned Masternodes
+      responses:
+        '200':
+          description: OK
+          schema:
+            $ref: '#/definitions/resignedMN'
         '406':
           description: Not Acceptable
   '/api/candidates/{candidate}':
@@ -170,6 +229,29 @@ paths:
             $ref: '#/definitions/isCandidate'
         '406':
           description: Not Acceptable
+  '/api/candidates/{candidate}/{owner}/isOwner':
+    parameters:
+      - name: candidate
+        in: path
+        type: string
+        description: candidate's address
+        required: true
+      - name: owner
+        in: path
+        type: string
+        description: owner's address
+        required: true
+    get:
+      tags:
+        - Candidates
+      summary: Owner checking
+      responses:
+        '200':
+          description: OK
+          schema:
+            $ref: '#/definitions/isOwner'
+        '406':
+          description: Not Acceptable
   '/api/candidates/{candidate}/{owner}/getRewards':
     parameters:
       - name: candidate
@@ -201,6 +283,24 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/candidateRewards'
+        '406':
+          description: Not Acceptable
+  '/api/candidates/slashed/{epoch}':
+    parameters:
+      - name: epoch
+        in: path
+        type: string
+        description: epoch number
+        required: true
+    get:
+      tags:
+        - Candidates
+      summary: Get list of slashed masternodes
+      responses:
+        '200':
+          description: OK
+          schema:
+            $ref: '#/definitions/slashedMasternodes'
         '406':
           description: Not Acceptable
   '/api/voters/{voter}/candidates':
@@ -236,7 +336,7 @@ paths:
       - name: voter
         in: path
         type: string
-        description: candidate's address
+        description: voter's address
         required: true
       - name: limit
         in: query
@@ -257,6 +357,24 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/voterRewards'
+        '406':
+          description: Not Acceptable
+  /api/voters/annualReward:
+    parameters:
+      - name: candidate
+        in: query
+        type: string
+        description: candidate's address
+        required: true
+    get:
+      tags:
+        - Voters
+      summary: Get ROI of masternode and voter
+      responses:
+        '200':
+          description: OK
+          schema:
+            $ref: '#/definitions/annualReward'
         '406':
           description: Not Acceptable
   '/api/transactions/candidate/{candidate}':
@@ -307,12 +425,38 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/txVoter'
+  '/api/transactions/{tx}':
+    parameters:
+      - name: tx
+        in: path
+        type: string
+        description: Transaction
+        required: true
+    get:
+      tags:
+        - Transaction
+      summary: Get a transaction's detail
+      responses:
+        '200':
+          description: OK
+          schema:
+            $ref: '#/definitions/transaction'
+  /api/signers/get/latest:
+    get:
+      tags:
+        - Signer
+      summary: Get a list of latest signers
+      responses:
+        '200':
+          description: OK
+          schema:
+            $ref: '#/definitions/signers'
 definitions:
   config:
     properties:
       blockchain:
         type: object
-        description: XinFin's configurations
+        description: XDC Network's configurations
         properties:
           rpc:
             type: string
@@ -329,48 +473,10 @@ definitions:
             description: Block time
       explorerUrl:
         type: string
-        description: xdcscan's API
-      grafanaUrl:
-        type: string
-        description: Grafana's API
+        description: XDCscan's API
       GA:
         type: string
         description: Google Analytic code
-  monitor:
-    properties:
-      series:
-        type: array
-        description: Chart's information
-        items:
-          type: object
-          properties:
-            name:
-              type: string
-              description: Name
-              enum:
-                - cpu
-                - memory
-            column:
-              type: array
-              description: columns in db
-              items:
-                type: string
-                description: Name of column
-                example:
-                  - time
-                  - cpu_user
-            values:
-              type: array
-              description: Data of columns
-              items:
-                type: number
-                description: data number of columns
-                example:
-                  - 0
-                  - 1
-      statement_id:
-        type: number
-        description: id
   candidate:
     properties:
       items:
@@ -607,3 +713,271 @@ definitions:
         type: number
         description: Number of candidate
         example: 100
+  slashedMN:
+    properties:
+      items:
+        type: array
+        description: Candidate's data
+        items:
+          type: object
+          description: candidate's information
+          example:
+            _id: 5c4006b47ff073e7961fabd5
+            candidate: '0x1c5a1cb41c920c2532cbb77be5845b258eca32f3'
+            smartContractAddress: '0x0000000000000000000000000000000000000088'
+            __v: 0
+            capacity: '114213709385390179602070'
+            capacityNumber: 114213.70938539018
+            createdAt: '2019-01-17T04:38:12.051Z'
+            nodeId: 1c5a1cb41c920c2532cbb77be5845b258eca32f3
+            owner: '0xe60f54049759a11d764756ece4d27815e990d92f'
+            status: SLASHED
+            updatedAt: '2019-01-29T10:38:18.268Z'
+            latestSignedBlock: 1220265
+      total:
+        type: number
+        description: Total number of candidate
+        example: 1
+  proposedMN:
+    properties:
+      items:
+        type: array
+        description: Candidate's data
+        items:
+          type: object
+          description: candidate's information
+          example:
+            _id: 5c4006b47ff073e7961fabd5
+            candidate: '0x1c5a1cb41c920c2532cbb77be5845b258eca32f3'
+            smartContractAddress: '0x0000000000000000000000000000000000000088'
+            __v: 0
+            capacity: '114213709385390179602070'
+            capacityNumber: 114213.70938539018
+            createdAt: '2019-01-17T04:38:12.051Z'
+            nodeId: 1c5a1cb41c920c2532cbb77be5845b258eca32f3
+            owner: '0xe60f54049759a11d764756ece4d27815e990d92f'
+            status: STANDBY
+            updatedAt: '2019-01-29T10:38:18.268Z'
+            latestSignedBlock: 1220265
+      total:
+        type: number
+        description: Total number of candidate
+        example: 1
+  resignedMN:
+    properties:
+      items:
+        type: array
+        description: Candidate's data
+        items:
+          type: object
+          description: candidate's information
+          example:
+            _id: 5c4006b37ff073e7961fab14
+            candidate: '0x7a3b86261cd2042a3190c81dd37d0a12e0397daf'
+            smartContractAddress: '0x0000000000000000000000000000000000000088'
+            __v: 0
+            capacity: '40508760000000000000000'
+            capacityNumber: 40508.76
+            createdAt: '2019-01-17T04:38:11.949Z'
+            nodeId: 7a3b86261cd2042a3190c81dd37d0a12e0397daf
+            owner: '0xbff690303287ce327c319f575c7671c3ad626de4'
+            status: RESIGNED
+            updatedAt: '2019-01-29T10:11:19.464Z'
+            latestSignedBlock: 957442
+      total:
+        type: number
+        description: Total number of candidate
+        example: 1
+  isOwner:
+    type: number
+    enum:
+      - 'true'
+      - 'false'
+  transaction:
+    properties:
+      _id:
+        type: string
+        description: id
+        example: 5c52a4465f0abf3496da0e91
+      tx:
+        type: string
+        description: transaction hash
+        example: '0xdd03614f86982663b4c17eaaf9051b3df7a88fefc445df41921fa223c6178bf7'
+      smartContractAddress:
+        type: string
+        description: smart contract's address
+        example: '0x0000000000000000000000000000000000000088'
+      __v:
+        type: number
+        description: __v
+        example: 0
+      capacity:
+        type: string
+        description: capacity in wei
+        example: '1715000000000000000000'
+      createdAt:
+        type: string
+        description: creation date of candidate
+        example: '2018-10-31T03:42:39.375Z'
+      owner:
+        type: string
+        description: owner's address
+        example: '0x7e0d154cba89190ce1801031cba9d46ad21eb317'
+      blockNumber:
+        type: number
+        description: blockNumber
+        example: 1310702
+      updatedAt:
+        type: string
+        description: update time
+        example: '2019-01-11T09:17:59.535Z'
+      voter:
+        type: string
+        description: voter address
+        example: '0x7e0d154cba89190ce1801031cba9d46ad21eb317'
+      candidate:
+        type: string
+        description: candidate address
+        example: ''
+      event:
+        type: string
+        description: event
+        example: Withdraw
+        enum:
+          - Vote
+          - Unvote
+          - Withdraw
+          - Propose
+          - Resign
+  signers:
+    properties:
+      _id:
+        type: string
+        description: id
+        example: 5c52a4465f0abf3496da0e91
+      signers:
+        type: array
+        description: List of latest signers
+        items:
+          type: string
+          description: signer address
+          example: '0x98ffa09ae64a3ad63289ee0def385e6455b777e5'
+        example:
+          - '0x98ffa09ae64a3ad63289ee0def385e6455b777e5'
+          - '0x6670fe10f076539459753b7aabc53fc218644042'
+          - '0x71ab3b4352084f13bedb15693cd6bb923a1b80a1'
+      __v:
+        type: number
+        description: __v
+        example: 0
+      networkId:
+        type: string
+        description: capacity in wei
+        example: '1715000000000000000000'
+      createdAt:
+        type: string
+        description: creation date of candidate
+        example: '2018-10-31T03:42:39.375Z'
+      blockNumber:
+        type: number
+        description: blockNumber
+        example: 1310702
+      updatedAt:
+        type: string
+        description: update time
+        example: '2019-01-11T09:17:59.535Z'
+  masternode:
+    properties:
+      items:
+        type: array
+        description: Masternode's data
+        items:
+          type: object
+          description: masternode's information
+          example:
+            _id: 5c52a0df5f0abf3496d9a38f
+            candidate: '0x1d50df657b6dce50bac634bf18e2d986d807e940'
+            smartContractAddress: '0x0000000000000000000000000000000000000088'
+            __v: 0
+            capacity: '574962709628904011242293'
+            capacityNumber: 574962.709628904
+            createdAt: '2019-01-31T07:16:47.833Z'
+            nodeId: 1d50df657b6dce50bac634bf18e2d986d807e940
+            owner: '0x300d18c65563d0c9021d7722dd1aab74b9cc447f'
+            status: MASTERNODE
+            updatedAt: '2019-04-11T02:56:39.928Z'
+            latestSignedBlock: 3899535
+            name: GNBA.GE
+            rank: 1
+      activeCandidates:
+        type: number
+        description: Total number of active masternode(status = 'MASTERNODE')
+        example: 150
+      totalSlashed:
+        type: number
+        description: Number of slashed masternode
+        example: 1
+      totalResigned:
+        type: number
+        description: Number of resigned masternode
+        example: 53
+      totalProposed:
+        type: number
+        description: Number of proposed masternode
+        example: 10
+  slashedMasternodes:
+    properties:
+      items:
+        type: object
+        description: Masternode's data
+        items:
+          type: object
+          description: slashed masternodelist
+          example:
+            penalties:
+              - '0x8597e3920d5bb0e159a2a2d730f21977d89c2270'
+            _id: 5caeadc6f6aacdcc4d19d30f
+            epoch: 4334
+            __v: 0
+            blockNumber: 3899700
+            createdAt: '2019-04-11T03:00:22.636Z'
+            networkId: 88
+            updatedAt: '2019-04-11T03:22:16.136Z'
+      blockNumber:
+        type: number
+        description: Blocknumber slashed
+        example: 3899700
+      epoch:
+        type: number
+        description: epoch slashed
+        example: 4334
+      networkId:
+        type: number
+        description: Network id
+        example: 88
+  annualReward:
+    properties:
+      epochDuration:
+        type: number
+        description: Epoch duration in minutes
+        example: 30
+      lastEpoch:
+        type: number
+        description: Last epoch
+        example: 6945
+      numberOfMN:
+        type: number
+        description: Masternode numbers
+        example: 150
+      capacity:
+        type: string
+        description: Masternode capacity
+        example: 200000
+      voterROI:
+        type: number
+        description: Voter ROI
+        example: 6
+      mnROI:
+        type: number
+        description: Masternode ROI
+        example: 29
